--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "gulp-minify-css": "~0.3.6",
     "gulp-uglify": "~0.3.1",
     "gulp-htmlmin": "~0.1.3",
-    "gulp-imagemin": "~0.6.1"
-    "glob": "~4.0.4"
+    "gulp-imagemin": "~0.6.1",
+    "glob": "~4.0.4",
+    "yargs": "~1.2.6",
+    "gulp-if": "~1.2.2",
+    "gulp-coffee": "~2.1.1",
+    "gulp-autoprefixer": "0.0.8"
   }
 }
