--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "yargs": "~1.2.6",
     "gulp-if": "~1.2.2",
     "gulp-coffee": "~2.1.1",
-    "gulp-autoprefixer": "0.0.8"
+    "gulp-autoprefixer": "0.0.8",
+    "gulp-renderful": "0.0.3"
   }
 }
