--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "animate.css": "~3.2.0"
+    "animate.css": "~3.2.0",
+    "zeroclipboard": "~2.1.5"
   }
 }
