--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "animate.css": "~3.2.0",
-    "zeroclipboard": "~2.1.5"
+    "zeroclipboard": "~2.1.5",
+    "Chart.js": "~0.2.0"
   }
 }
